divided specialtys on subrutes
